--- a/net-libs/libvncserver/ChangeLog
+++ b/net-libs/libvncserver/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libvncserver
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libvncserver/ChangeLog,v 1.70 2012/11/14 21:08:49 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libvncserver/ChangeLog,v 1.71 2012/11/14 21:30:11 floppym Exp $
+
+  14 Nov 2012; Mike Gilbert <floppym@gentoo.org> libvncserver-0.9.9-r1.ebuild:
+  Stabilize revbump per ago.
 
 *libvncserver-0.9.9-r1 (14 Nov 2012)
 
