--- a/kde-misc/tellico/ChangeLog
+++ b/kde-misc/tellico/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/tellico
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/tellico/ChangeLog,v 1.114 2012/11/14 21:48:47 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/tellico/ChangeLog,v 1.115 2012/11/14 21:49:40 johu Exp $
+
+  14 Nov 2012; Johannes Huber <johu@gentoo.org> -tellico-2.3.5.ebuild:
+  Remove old.
 
   14 Nov 2012; Johannes Huber <johu@gentoo.org> tellico-2.3.6.ebuild:
   Stable for x86, wrt bug #441344
