--- a/net-p2p/ktorrent/ChangeLog
+++ b/net-p2p/ktorrent/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/ktorrent
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/ktorrent/ChangeLog,v 1.187 2012/11/14 16:35:40 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/ktorrent/ChangeLog,v 1.188 2012/11/14 21:52:50 johu Exp $
+
+  14 Nov 2012; Johannes Huber <johu@gentoo.org> ktorrent-4.3.0.ebuild:
+  Stable for x86, wrt bug #441452
 
   14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> ktorrent-4.3.0.ebuild:
   Stable for amd64, wrt bug #441452
