--- a/net-libs/libktorrent/ChangeLog
+++ b/net-libs/libktorrent/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libktorrent
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libktorrent/ChangeLog,v 1.41 2012/11/14 16:35:18 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libktorrent/ChangeLog,v 1.42 2012/11/14 21:53:18 johu Exp $
+
+  14 Nov 2012; Johannes Huber <johu@gentoo.org> libktorrent-1.3.0.ebuild:
+  Stable for x86, wrt bug #441452
 
   14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> libktorrent-1.3.0.ebuild:
   Stable for amd64, wrt bug #441452
