--- a/dev-lang/v8/ChangeLog
+++ b/dev-lang/v8/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/v8
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.254 2012/11/07 16:25:49 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.255 2012/11/15 01:24:20 floppym Exp $
+
+*v8-3.14.5.1 (15 Nov 2012)
+
+  15 Nov 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.14.5.1.ebuild,
+  -v8-3.14.4.1.ebuild:
+  Beta channel bump.
 
   07 Nov 2012; Agostino Sarubbo <ago@gentoo.org> -v8-3.12.19.15.ebuild,
   -v8-3.13.7.4.ebuild:
