--- a/dev-lang/v8/ChangeLog
+++ b/dev-lang/v8/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/v8
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.255 2012/11/15 01:24:20 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.256 2012/11/15 02:10:48 phajdan.jr Exp $
+
+*v8-3.15.1.2 (15 Nov 2012)
+
+  15 Nov 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-3.15.1.2.ebuild:
+  Dev channel bump.
 
 *v8-3.14.5.1 (15 Nov 2012)
 
