--- a/www-client/chromium/ChangeLog
+++ b/www-client/chromium/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.750 2012/11/08 05:35:42 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.751 2012/11/15 02:14:55 floppym Exp $
+
+*chromium-24.0.1312.14 (15 Nov 2012)
+
+  15 Nov 2012; Mike Gilbert <floppym@gentoo.org> +chromium-24.0.1312.14.ebuild,
+  -chromium-24.0.1312.1.ebuild, -chromium-24.0.1312.2.ebuild:
+  Beta channel bump.
 
 *chromium-24.0.1312.5 (08 Nov 2012)
 
