--- a/www-client/chromium/ChangeLog
+++ b/www-client/chromium/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.751 2012/11/15 02:14:55 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.752 2012/11/15 03:37:30 phajdan.jr Exp $
+
+*chromium-25.0.1323.1 (15 Nov 2012)
+
+  15 Nov 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  +chromium-25.0.1323.1.ebuild, chromium-9999-r1.ebuild:
+  Dev channel bump. Use system libsrtp (bug #348600 by jlec). Back to bundled
+  opus. Use Gentoo-specific Google API keys.
 
 *chromium-24.0.1312.14 (15 Nov 2012)
 
