--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7140 2012/11/15 05:12:19 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7141 2012/11/15 10:58:46 scarabeus Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> package.mask:
+  Update the libav mask to be correct.
 
   15 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> package.mask:
   Mask libav-9 until its reverse dependencies build; see bug #443230 for
