--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7141 2012/11/15 10:58:46 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7142 2012/11/15 12:18:21 olemarkus Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  15 Nov 2012; Ole Markus With <olemarkus@gentoo.org> package.mask:
+  Masking php 5.5 alphas for testing
 
   15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> package.mask:
   Update the libav mask to be correct.
