--- a/app-misc/dtach/ChangeLog
+++ b/app-misc/dtach/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/dtach
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/dtach/ChangeLog,v 1.21 2012/11/12 19:16:34 nativemad Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/dtach/ChangeLog,v 1.22 2012/11/15 12:18:14 blueness Exp $
+
+  15 Nov 2012; Anthony G. Basile <blueness@gentoo.org> dtach-0.8-r1.ebuild:
+  stable ppc, bug #426496
 
   13 Nov 2012; Andreas Schuerch <nativemad@gentoo.org> dtach-0.8-r1.ebuild:
   x86 stable, see bug 426496
