--- a/net-irc/hexchat/ChangeLog
+++ b/net-irc/hexchat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/hexchat
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/hexchat/ChangeLog,v 1.14 2012/11/15 00:32:01 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/hexchat/ChangeLog,v 1.15 2012/11/15 12:51:32 ago Exp $
+
+  15 Nov 2012; Agostino Sarubbo <ago@gentoo.org> hexchat-2.9.3.ebuild:
+  Stable for amd64, wrt bug #443118
 
   15 Nov 2012; Anthony G. Basile <blueness@gentoo.org> hexchat-2.9.3.ebuild:
   stable arm ppc ppc64, bug #443118
