--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,14 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7143 2012/11/15 16:58:39 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7144 2012/11/15 18:17:31 pinkbyte Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  15 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> package.mask:
+  Remove mask for app-crypt/cryptoapi, cause package is removed from tree, bug
+  #438458
 
   15 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
   hardened/linux/uclibc/mips/package.mask:
