--- a/dev-util/osc/ChangeLog
+++ b/dev-util/osc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/osc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/osc/ChangeLog,v 1.5 2012/10/02 11:01:59 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/osc/ChangeLog,v 1.6 2012/11/15 18:49:23 scarabeus Exp $
+
+  15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> osc-0.136.0.ebuild:
+  We can go stable here without a prob.
 
 *osc-0.136.0 (02 Oct 2012)
 
