--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.504 2012/11/12 09:28:53 pesa Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.505 2012/11/15 19:49:34 scarabeus Exp $
+
+  15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> obs-service.eclass:
+  Use src_uri arrows to allow versioning sanely.
 
   12 Nov 2012; Davide Pesavento <pesa@gentoo.org> qt4-build.eclass:
   Update from qt overlay: respect AR (bug #440262); drop support for EAPI=2;
