--- a/dev-util/obs-service-cpanspec/ChangeLog
+++ b/dev-util/obs-service-cpanspec/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/obs-service-cpanspec
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-cpanspec/ChangeLog,v 1.3 2012/11/15 19:53:56 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-cpanspec/ChangeLog,v 1.4 2012/11/15 19:54:29 scarabeus Exp $
+
+  15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org>
+  obs-service-cpanspec-20101129.ebuild:
+  Stable on x86 and amd64.
 
 *obs-service-cpanspec-20101129 (15 Nov 2012)
 
