--- a/dev-util/obs-service-download_files/ChangeLog
+++ b/dev-util/obs-service-download_files/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-util/obs-service-download_files
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-download_files/ChangeLog,v 1.5 2012/10/02 11:06:53 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-download_files/ChangeLog,v 1.6 2012/11/15 19:56:43 scarabeus Exp $
+
+*obs-service-download_files-20120824 (15 Nov 2012)
+
+  15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org>
+  +obs-service-download_files-20120824.ebuild,
+  -obs-service-download_files-9999.ebuild:
+  Use versioned download_files.
 
   02 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org>
   obs-service-download_files-9999.ebuild:
