--- a/dev-util/obs-service-download_url/ChangeLog
+++ b/dev-util/obs-service-download_url/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/obs-service-download_url
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-download_url/ChangeLog,v 1.1 2012/11/15 20:05:00 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-download_url/ChangeLog,v 1.2 2012/11/15 20:05:40 scarabeus Exp $
+
+  15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org>
+  obs-service-download_url-20101229.ebuild:
+  Stable on amd64 and x86 as it is just copying two files.
 
 *obs-service-download_url-20101229 (15 Nov 2012)
 
