--- a/dev-util/obs-service-format_spec_file/ChangeLog
+++ b/dev-util/obs-service-format_spec_file/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-util/obs-service-format_spec_file
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-format_spec_file/ChangeLog,v 1.5 2012/10/02 11:06:11 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-format_spec_file/ChangeLog,v 1.6 2012/11/15 20:18:43 scarabeus Exp $
+
+*obs-service-format_spec_file-20121107 (15 Nov 2012)
+
+  15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org>
+  +obs-service-format_spec_file-20121107.ebuild,
+  -obs-service-format_spec_file-9999.ebuild:
+  Use versioned ebuild. Add more additional files.
 
   02 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org>
   -obs-service-format_spec_file-0.1.ebuild,
