--- a/dev-util/obs-service-source_validator/ChangeLog
+++ b/dev-util/obs-service-source_validator/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-util/obs-service-source_validator
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-source_validator/ChangeLog,v 1.2 2012/08/17 13:10:09 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-source_validator/ChangeLog,v 1.3 2012/11/15 20:33:01 scarabeus Exp $
+
+*obs-service-source_validator-0.2 (15 Nov 2012)
+
+  15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org>
+  +obs-service-source_validator-0.2.ebuild,
+  -obs-service-source_validator-9999.ebuild:
+  use versioned version of source_validator.
 
   17 Aug 2012; Tomáš Chvátal <scarabeus@gentoo.org> metadata.xml:
   Use suse herd.
