--- a/dev-util/obs-service-format_spec_file/ChangeLog
+++ b/dev-util/obs-service-format_spec_file/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/obs-service-format_spec_file
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-format_spec_file/ChangeLog,v 1.6 2012/11/15 20:18:43 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-format_spec_file/ChangeLog,v 1.7 2012/11/15 20:34:41 scarabeus Exp $
+
+  15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org>
+  obs-service-format_spec_file-20121107.ebuild:
+  Stable on amd64 and x86 as we just copy few files around.
 
 *obs-service-format_spec_file-20121107 (15 Nov 2012)
 
