--- a/dev-util/obs-service-source_validator/ChangeLog
+++ b/dev-util/obs-service-source_validator/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/obs-service-source_validator
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-source_validator/ChangeLog,v 1.3 2012/11/15 20:33:01 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-source_validator/ChangeLog,v 1.4 2012/11/15 20:34:03 scarabeus Exp $
+
+  15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org>
+  obs-service-source_validator-0.2.ebuild:
+  Stable on amd64 and x86 as we just copy few files around.
 
 *obs-service-source_validator-0.2 (15 Nov 2012)
 
