--- a/dev-util/obs-service-recompress/ChangeLog
+++ b/dev-util/obs-service-recompress/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/obs-service-recompress
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-recompress/ChangeLog,v 1.1 2012/11/15 20:50:30 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-recompress/ChangeLog,v 1.2 2012/11/15 20:51:28 scarabeus Exp $
+
+  15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org>
+  obs-service-recompress-20120301.ebuild:
+  Stable on amd64 and x86 as we just copy two files around.
 
 *obs-service-recompress-20120301 (15 Nov 2012)
 
