--- a/dev-util/obs-service-tar_scm/ChangeLog
+++ b/dev-util/obs-service-tar_scm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/obs-service-tar_scm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-tar_scm/ChangeLog,v 1.1 2012/11/15 21:13:46 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/obs-service-tar_scm/ChangeLog,v 1.2 2012/11/15 21:14:48 scarabeus Exp $
+
+  15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org>
+  obs-service-tar_scm-20121101.ebuild:
+  Stabilise on amd64 and x86 as it is just few files around.
 
 *obs-service-tar_scm-20121101 (15 Nov 2012)
 
