--- a/x11-misc/pnmixer/ChangeLog
+++ b/x11-misc/pnmixer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/pnmixer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/pnmixer/ChangeLog,v 1.1 2012/11/16 00:20:24 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/pnmixer/ChangeLog,v 1.2 2012/11/16 00:25:27 hasufell Exp $
+
+  16 Nov 2012; Julian Ospald <hasufell@gentoo.org>
+  pnmixer-0.6_pre20111213.ebuild:
+  clarify description
 
 *pnmixer-0.6_pre20111213 (16 Nov 2012)
 
