--- a/media-sound/murmur/ChangeLog
+++ b/media-sound/murmur/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/murmur
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/murmur/ChangeLog,v 1.34 2012/11/16 00:49:08 tgurr Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/murmur/ChangeLog,v 1.35 2012/11/16 00:51:01 tgurr Exp $
+
+  16 Nov 2012; Timo Gurr <tgurr@gentoo.org> -murmur-1.2.3.ebuild:
+  Actually remove the old.
 
 *murmur-1.2.4_beta1 (16 Nov 2012)
 
