--- a/sci-mathematics/msieve/ChangeLog
+++ b/sci-mathematics/msieve/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-mathematics/msieve
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/msieve/ChangeLog,v 1.1 2012/11/16 03:32:43 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/msieve/ChangeLog,v 1.2 2012/11/16 03:59:10 patrick Exp $
+
+  16 Nov 2012; Patrick Lauer <patrick@gentoo.org> metadata.xml,
+  msieve-1.50.ebuild:
+  Adding ecm support
 
 *msieve-1.50 (16 Nov 2012)
 
