--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7146 2012/11/15 20:42:23 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7147 2012/11/16 05:19:05 phajdan.jr Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  16 Nov 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> base/package.use.mask:
+  Mask www-client/chromium system-ffmpeg USE flag (experimental).
 
   15 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
   hardened/linux/uclibc/mips/package.mask:
