--- a/media-gfx/nvidia-cg-toolkit/ChangeLog
+++ b/media-gfx/nvidia-cg-toolkit/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for media-gfx/nvidia-cg-toolkit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/nvidia-cg-toolkit/ChangeLog,v 1.48 2012/11/15 22:07:12 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/nvidia-cg-toolkit/ChangeLog,v 1.49 2012/11/16 09:43:27 jlec Exp $
+
+*nvidia-cg-toolkit-3.1.0013-r1 (16 Nov 2012)
+
+  16 Nov 2012; Justin Lecher <jlec@gentoo.org> +files/80cgc-opt-3,
+  +nvidia-cg-toolkit-3.1.0013-r1.ebuild, +files/nvidia-cg-toolkit.pc.in,
+  +files/nvidia-cg-toolkit-gl.pc.in:
+  Don't add binary packages to global linker search path; instead using
+  pkg-config. Thanks ssuominen pointing this out
 
 *nvidia-cg-toolkit-3.1.0013 (15 Nov 2012)
 
