--- a/media-gfx/nvidia-cg-toolkit/ChangeLog
+++ b/media-gfx/nvidia-cg-toolkit/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/nvidia-cg-toolkit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/nvidia-cg-toolkit/ChangeLog,v 1.49 2012/11/16 09:43:27 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/nvidia-cg-toolkit/ChangeLog,v 1.50 2012/11/16 09:57:25 jlec Exp $
+
+  16 Nov 2012; Justin Lecher <jlec@gentoo.org>
+  nvidia-cg-toolkit-3.1.0013-r1.ebuild, files/nvidia-cg-toolkit-gl.pc.in:
+  Don't mix ABIs in pkd-config deps
 
 *nvidia-cg-toolkit-3.1.0013-r1 (16 Nov 2012)
 
