--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7149 2012/11/16 09:45:58 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7150 2012/11/16 10:11:09 ulm Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
@@ -8,6 +8,7 @@
 
   16 Nov 2012; Ulrich Müller <ulm@gentoo.org> license_groups:
   Remove JamesClark from MISC-FREE license group, duplicate of MIT.
+  Add UPEK-SDK-EULA to EULA license group.
 
   16 Nov 2012; Hans de Graaff <graaff@gentoo.org> package.mask:
   Remove mask for experimental gherkin slots, now removed from the tree.
