--- a/app-misc/spacenavd/ChangeLog
+++ b/app-misc/spacenavd/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/spacenavd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/spacenavd/ChangeLog,v 1.9 2012/09/30 19:26:57 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/spacenavd/ChangeLog,v 1.10 2012/11/16 10:25:33 ssuominen Exp $
+
+*spacenavd-0.5-r4 (16 Nov 2012)
+
+  16 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> +spacenavd-0.5-r4.ebuild:
+  Use udev.eclass to read correct udevdir from udev.pc pkg-config file. It is
+  never correct to hardcode the path.
 
   30 Sep 2012; Agostino Sarubbo <ago@gentoo.org> spacenavd-0.5-r2.ebuild:
   Stable for amd64, wrt bug #436576
