--- a/app-misc/spacenavd/ChangeLog
+++ b/app-misc/spacenavd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/spacenavd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/spacenavd/ChangeLog,v 1.10 2012/11/16 10:25:33 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/spacenavd/ChangeLog,v 1.11 2012/11/16 10:26:42 ssuominen Exp $
+
+  16 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -spacenavd-0.5-r3.ebuild:
+  old
 
 *spacenavd-0.5-r4 (16 Nov 2012)
 
