--- a/xfce-extra/xfce4-vala/ChangeLog
+++ b/xfce-extra/xfce4-vala/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/xfce4-vala
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-vala/ChangeLog,v 1.6 2012/05/05 07:42:41 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-vala/ChangeLog,v 1.7 2012/11/16 12:36:52 ssuominen Exp $
+
+*xfce4-vala-4.10.2 (16 Nov 2012)
+
+  16 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
+  +xfce4-vala-4.10.2.ebuild:
+  Version bump.
 
   05 May 2012; Michał Górny <mgorny@gentoo.org> xfce4-vala-4.8.1.ebuild:
   dev-util/pkgconfig -> virtual/pkgconfig
