--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7150 2012/11/16 10:11:09 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7151 2012/11/16 13:11:39 ssuominen Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  16 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> package.mask:
+  Lastrite metacity-python wrt #438894
 
   16 Nov 2012; Ulrich Müller <ulm@gentoo.org> license_groups:
   Remove JamesClark from MISC-FREE license group, duplicate of MIT.
