--- a/dev-libs/Ice/ChangeLog
+++ b/dev-libs/Ice/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/Ice
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/Ice/ChangeLog,v 1.16 2012/11/16 13:19:27 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/Ice/ChangeLog,v 1.17 2012/11/16 13:40:30 ssuominen Exp $
+
+  16 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> Ice-3.4.2.ebuild:
+  Fix building with >=sys-devel/gcc-4.7 wrt #422585
 
   16 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> Ice-3.4.2.ebuild:
   Pull in correct SLOT of dev-libs/openssl to ensure headers are installed.
