--- a/app-crypt/pinentry/ChangeLog
+++ b/app-crypt/pinentry/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/pinentry
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/pinentry/ChangeLog,v 1.129 2012/11/16 14:41:37 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/pinentry/ChangeLog,v 1.130 2012/11/16 16:01:14 scarabeus Exp $
+
+  16 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> pinentry-0.8.2.ebuild:
+  Try to fix building with static useflag enabled
 
   16 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> pinentry-0.8.2.ebuild:
   Bump eapi in the ebuild and solve the log message print. Wrt bug#440540.
