--- a/dev-util/osc/ChangeLog
+++ b/dev-util/osc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/osc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/osc/ChangeLog,v 1.7 2012/11/15 21:05:23 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/osc/ChangeLog,v 1.8 2012/11/16 16:37:07 scarabeus Exp $
+
+  16 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> osc-0.136.0.ebuild,
+  osc-9999.ebuild:
+  Fix py3 crasher by restricting py3. Fixes bug#443514.
 
   15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> osc-0.136.0.ebuild,
   osc-9999.ebuild:
