--- a/x11-drivers/xf86-video-ati/ChangeLog
+++ b/x11-drivers/xf86-video-ati/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-ati
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-ati/ChangeLog,v 1.181 2012/11/16 16:32:29 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-ati/ChangeLog,v 1.182 2012/11/16 16:45:42 ago Exp $
+
+  16 Nov 2012; Agostino Sarubbo <ago@gentoo.org>
+  xf86-video-ati-6.14.6-r1.ebuild:
+  Stable for amd64, wrt bug #440872
 
   16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> xf86-video-ati-7.0.0.ebuild:
   Stable for amd64, wrt bug #440872
