--- a/x11-base/xorg-server/ChangeLog
+++ b/x11-base/xorg-server/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-base/xorg-server
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.688 2012/11/16 16:29:19 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.689 2012/11/16 16:46:11 ago Exp $
+
+  16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> xorg-server-1.12.4.ebuild:
+  Stable for amd64, wrt bug #440872
 
   16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> xorg-server-1.13.0-r1.ebuild:
   Stable for amd64, wrt bug #440872
