--- a/app-office/libreoffice/ChangeLog
+++ b/app-office/libreoffice/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-office/libreoffice
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.392 2012/11/14 22:32:55 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.393 2012/11/16 18:30:28 ago Exp $
+
+  16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> libreoffice-3.6.3.2.ebuild,
+  libreoffice-3.6.9999.ebuild, libreoffice-9999-r2.ebuild:
+  typo
 
   14 Nov 2012; Agostino Sarubbo <ago@gentoo.org>
   files/generate_libreoffice_package.sh:
