--- a/x11-drivers/ati-drivers/ChangeLog
+++ b/x11-drivers/ati-drivers/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/ati-drivers
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/ati-drivers/ChangeLog,v 1.304 2012/11/16 16:29:37 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/ati-drivers/ChangeLog,v 1.305 2012/11/16 18:42:08 chithanh Exp $
+
+  16 Nov 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  ati-drivers-12.11_beta.ebuild:
+  Add warning message for xf86-video-intel-2.20.3 crashing bug #430000.
 
   16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> ati-drivers-12.11_beta.ebuild:
   Stable for amd64, wrt bug #440872
