--- a/dev-cpp/libcmis/ChangeLog
+++ b/dev-cpp/libcmis/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/libcmis
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libcmis/ChangeLog,v 1.17 2012/11/06 13:16:39 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libcmis/ChangeLog,v 1.18 2012/11/16 19:27:28 ago Exp $
+
+  16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> libcmis-0.2.3-r1.ebuild:
+  really stable
 
   06 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> libcmis-0.3.0.ebuild,
   libcmis-9999.ebuild:
