default to libxml2 for xml support (bug #422811)
Package-Manager: portage-2.1.11.31/cvs/Linux x86_64

--- a/dev-games/cegui/ChangeLog
+++ b/dev-games/cegui/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-games/cegui
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/cegui/ChangeLog,v 1.50 2012/07/09 03:14:07 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-games/cegui/ChangeLog,v 1.51 2012/11/17 06:07:58 mr_bones_ Exp $
+
+  17 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org> cegui-0.7.7.ebuild:
+  default to libxml2 for xml support (bug #422811)
 
 *cegui-0.7.7 (09 Jul 2012)
 
