Add USE-conditional deps on csync USE flags wrt bug 433165
Package-Manager: portage-2.2.0_alpha142/cvs/Linux x86_64
Manifest-Sign-Key: 0x42618354

--- a/net-misc/mirall/ChangeLog
+++ b/net-misc/mirall/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/mirall
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/mirall/ChangeLog,v 1.8 2012/11/16 20:16:04 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/mirall/ChangeLog,v 1.9 2012/11/30 05:40:41 creffett Exp $
+
+*mirall-1.1.1-r1 (30 Nov 2012)
+
+  30 Nov 2012; Chris Reffett <creffett@gentoo.org> +mirall-1.1.1-r1.ebuild,
+  -mirall-1.1.1.ebuild, metadata.xml:
+  Add USE-conditional deps on csync USE flags wrt bug 433165
 
 *mirall-1.1.1 (16 Nov 2012)
 
